problem.html add img tag

--- a/CollegeMathBankProject/WebContent/problem.html
+++ b/CollegeMathBankProject/WebContent/problem.html
@@ -203,7 +203,8 @@
     <div class="pro">
       <p class="solandexpp">문제</p>
       <p></p>
-        <p>급수\[\sum_{n=1}^{\infty} \frac{(-1)^{n+1}}{n^5}\]의 합을 소수 넷째 자리까지</p>
+      <p>급수\[\sum_{n=1}^{\infty} \frac{(-1)^{n+1}}{n^5}\]의 합을 소수 넷째 자리까지</p>
+      <img id="solutionimg" src="" alt="">
     </div>
 
     <div class="buttondiv">
@@ -219,6 +220,7 @@
     <div class="solandexpdiv"id="exp">
       <p class="solandexpp" >해설</p>
       <p>0.9721</p>
+      <img id="explanationimg" src="" alt="">
     </div>
 
   </body>
