--- a/CollegeMathBankProject/WebContent/problem.html
+++ b/CollegeMathBankProject/WebContent/problem.html
@@ -202,8 +202,9 @@
 
     <div class="pro">
       <p class="solandexpp">문제</p>
-      <p></p>
+      <p></p> <!-- <p>데이터 베이스로 부터 문제를 읽어와서 여기에 그대로 대입하면 된다.</p> -->
       <p>급수\[\sum_{n=1}^{\infty} \frac{(-1)^{n+1}}{n^5}\]의 합을 소수 넷째 자리까지</p>
+      <!-- src="DB에 저장된 이미지가 저장된 경로를 대입하면 된다" -->
       <img id="solutionimg" src="" alt="">
     </div>
 
