subject 선택시 해당 페이지 변경 구현중
- subject html 수정
- MathDAO 수정

--- a/CollegeMathBankProject/WebContent/HTML/subject.html
+++ b/CollegeMathBankProject/WebContent/HTML/subject.html
@@ -125,31 +125,31 @@
         <li class="outer-menu-item" id="menu1">
           <span class="menu-title">미적분</span>
           <ul class="inner-menu" id="first">
-            <li><a href="#">함수와 극한</a></li>
-            <li><a href="#">도함수</a></li>
-            <li><a href="#">역함수</a></li>
-            <li><a href="#">미분</a></li>
-            <li><a href="#">적분</a></li>
-            <li><a href="#">급수</a></li>
-            <li><a href="#">매개 방정식과 극 좌표</a></li>
-            <li><a href="#">벡터와 공간 기하학</a></li>
-            <li><a href="#">편도함수</a></li>
-            <li><a href="#">다중 적분</a></li>
-            <li><a href="#">벡터 해석</a></li>
+            <li><a href="?sub=미적분&con=함수와 극한">함수와 극한</a></li>
+            <li><a href="?sub=미적분&con=도함수">도함수</a></li>
+            <li><a href="?sub=미적분&con=역합수">역함수</a></li>
+            <li><a href="?sub=미적분&con=미분">미분</a></li>
+            <li><a href="?sub=미적분&con=적분">적분</a></li>
+            <li><a href="?sub=미적분&con=급수">급수</a></li>
+            <li><a href="?sub=미적분&con=매개 방정식과 극 좌표">매개 방정식과 극 좌표</a></li>
+            <li><a href="?sub=미적분&con=벡터와 공간 기하학">벡터와 공간 기하학</a></li>
+            <li><a href="?sub=미적분&con=편도합수">편도함수</a></li>
+            <li><a href="?sub=미적분&con=다중 적분">다중 적분</a></li>
+            <li><a href="?sub=미적분&con=벡터 해석">벡터 해석</a></li>
           </ul>
         </li>
         <li class="outer-menu-item" id="menu2">
           <span class="menu-title">이산수학</span>
           <div class="inner-div">
             <ul class="inner-menu">
-              <li><a href="#">논리와 명제</a></li>
-              <li><a href="#">성질과 알고리즘</a></li>
-              <li><a href="#">세는 방법</a></li>
-              <li><a href="#">관계 및 함수</a></li>
-              <li><a href="#">그래프</a></li>
-              <li><a href="#">수형도</a></li>
-              <li><a href="#">부울대수</a></li>
-              <li><a href="#">형식언어와 유한상태기계</a></li>
+              <li><a href="?sub=이산수학&con=논리와 명제">논리와 명제</a></li>
+              <li><a href="?sub=이산수학&con=성질과 알고리즘">성질과 알고리즘</a></li>
+              <li><a href="?sub=이산수학&con=세는 방법">세는 방법</a></li>
+              <li><a href="?sub=이산수학&con=관계 및 함수">관계 및 함수</a></li>
+              <li><a href="?sub=이산수학&con=그래프">그래프</a></li>
+              <li><a href="?sub=이산수학&con=수형도">수형도</a></li>
+              <li><a href="?sub=이산수학&con=부울대수">부울대수</a></li>
+              <li><a href="?sub=이산수학&con=형식언어와 유한상태기계">형식언어와 유한상태기계</a></li>
             </ul>
           </div>
         </li>
@@ -157,16 +157,16 @@
           <span class="menu-title">확률과 통계</span>
           <div class="inner-div">
             <ul class="inner-menu">
-              <li><a href="#">집합</a></li>
-              <li><a href="#">확률</a></li>
-              <li><a href="#">확률변수</a></li>
-              <li><a href="#">확률벡터</a></li>
-              <li><a href="#">순서 통계량</a></li>
-              <li><a href="#">순위 통계량</a></li>
-              <li><a href="#">확률변수와 수렴</a></li>
-              <li><a href="#">확률과정</a></li>
-              <li><a href="#">전력 밀도와 선형 시스템</a></li>
-              <li><a href="#">몇 가지 확률 과정</a></li>
+              <li><a href="?sub=확률과 통계&con=집합">집합</a></li>
+              <li><a href="?sub=확률과 통계&con=확률">확률</a></li>
+              <li><a href="?sub=확률과 통계&con=확률변수">확률변수</a></li>
+              <li><a href="?sub=확률과 통계&con=확률벡터">확률벡터</a></li>
+              <li><a href="?sub=확률과 통계&con=순서 통계량">순서 통계량</a></li>
+              <li><a href="?sub=확률과 통계&con=순위 통계량">순위 통계량</a></li>
+              <li><a href="?sub=확률과 통계&con=확률변수와 수렴">확률변수와 수렴</a></li>
+              <li><a href="?sub=확률과 통계&con=확률과정">확률과정</a></li>
+              <li><a href="?sub=확률과 통계&con=전력 밀도와 선형 시스템">전력 밀도와 선형 시스템</a></li>
+              <li><a href="?sub=확률과 통계&con=몇 가지 확률 과정">몇 가지 확률 과정</a></li>
             </ul>
           </div>
         </li>
@@ -174,15 +174,15 @@
           <span class="menu-title">선형대수</span>
           <div class="inner-div">
             <ul class="inner-menu">
-              <li><a href="#">연립일차방적식과 행렬</a></li>
-              <li><a href="#">행렬식</a></li>
-              <li><a href="#">유클리드 벡터공간</a></li>
-              <li><a href="#">일반 벡터공간</a></li>
-              <li><a href="#">고유값, 고유벡터</a></li>
-              <li><a href="#">내적공간</a></li>
-              <li><a href="#">대각화와 이차형식</a></li>
-              <li><a href="#">선형변환</a></li>
-              <li><a href="#">수치적 방법</a></li>
+              <li><a href="?sub=선형대수&con=연립일차방정식과 행렬">연립일차방적식과 행렬</a></li>
+              <li><a href="?sub=선형대수&con=행렬식">행렬식</a></li>
+              <li><a href="?sub=선형대수&con=유클리드 벡터공간">유클리드 벡터공간</a></li>
+              <li><a href="?sub=선형대수&con=일반 벡터공간">일반 벡터공간</a></li>
+              <li><a href="?sub=선형대수&con=고유값, 고유벡터">고유값, 고유벡터</a></li>
+              <li><a href="?sub=선형대수&con=내적공간">내적공간</a></li>
+              <li><a href="?sub=선형대수&con=대각화와 이차형식">대각화와 이차형식</a></li>
+              <li><a href="?sub=선형대수&con=선형변환">선형변환</a></li>
+              <li><a href="?sub=선형대수&con=수치적 방법">수치적 방법</a></li>
             </ul>
           </div>
         </li>
