--- a/CollegeMathBankProject/WebContent/HTML/problem.html
+++ b/CollegeMathBankProject/WebContent/HTML/problem.html
@@ -191,12 +191,31 @@
       margin: 20px;
     }
 
+    #frmbutton{
+      float: right;
+      position: relative;
+    }
+    #subject{
+      right: 10px;
+    }
+    .topbutton{
+      position: absolute;
+      top: -60px;
+      background-color: rgb(255,255,255);
+      border-style:solid;
+      border-width: thin;
+    }
+
     </style>
   </head>
 
   <body>
 
     <h1>대학 수학 문제은행</h1>
+    <form id="frmbutton" method="post">
+      <input class="topbutton" type="button" id="subject" name="과목선택" value="과목선택">
+      <input class="topbutton" type="button" id="next" name="과목선택" value="다음문제">
+    </form>
     <h3>과목</h3>
     <h4>목차</h4>
 
