--- a/CollegeMathBankProject/WebContent/HTML/subject.html
+++ b/CollegeMathBankProject/WebContent/HTML/subject.html
@@ -113,13 +113,27 @@
       left: -20px;
       position: absolute;
     }
+    #frmLogout{
+      float: right;
+      position: relative;
+    }
+    #logoutbutton{
+      position: absolute;
+      top: -60px;
+      background-color: rgb(255,255,255);
+      border-style:solid;
+      border-width: thin;
+    }
+
 
 
     </style>
   </head>
   <body>
 <h1>대학 수학 문제은행</h1>
-
+  <form id="frmLogout" method="post">
+    <input type="button" id="logoutbutton" name="로그아웃" value="로그아웃">
+  </form>
     <div class="menu-list" class="div">
       <ul class="outer-menu">
         <li class="outer-menu-item" id="menu1">
