로그아웃버튼 타입 수정

--- a/CollegeMathBankProject/WebContent/HTML/subject.html
+++ b/CollegeMathBankProject/WebContent/HTML/subject.html
@@ -132,7 +132,7 @@
   <body>
 <h1>대학 수학 문제은행</h1>
   <form id="frmLogout" method="post">
-    <input type="button" id="logoutbutton" name="로그아웃" value="로그아웃">
+    <input type="submit" id="logoutbutton" name="로그아웃" value="로그아웃">
   </form>
     <div class="menu-list" class="div">
       <ul class="outer-menu">
