problem.html 버튼 타입 수정

--- a/CollegeMathBankProject/WebContent/HTML/problem.html
+++ b/CollegeMathBankProject/WebContent/HTML/problem.html
@@ -213,8 +213,8 @@
 
     <h1>대학 수학 문제은행</h1>
     <form id="frmbutton" method="post">
-      <input class="topbutton" type="button" id="subject" name="과목선택" value="과목선택">
-      <input class="topbutton" type="button" id="next" name="과목선택" value="다음문제">
+      <input class="topbutton" type="submit" id="subject" name="과목선택" value="과목선택">
+      <input class="topbutton" type="submit" id="next" name="다음문제" value="다음문제">
     </form>
     <h3>과목</h3>
     <h4>목차</h4>
