--- a/CollegeMathBankProject/WebContent/HTML/problem.html
+++ b/CollegeMathBankProject/WebContent/HTML/problem.html
@@ -210,7 +210,6 @@
   </head>
 
   <body>
-
     <h1>대학 수학 문제은행</h1>
     <form id="frmbutton" method="post">
       <input class="topbutton" type="submit" id="subject" name="과목선택" value="과목선택">
@@ -232,15 +231,15 @@
       <input type="button" id="expbutton" class = "button" tabindex="2" value="해설보기">
     </div>
 
-    <div class="solandexpdiv"id="sol">
+    <div class="solandexpdiv" id="sol">
       <p class="solandexpp" >정답</p>
       <p>0.9721</p>
     </div>
 
-    <div class="solandexpdiv"id="exp">
+    <div class="solandexpdiv" id="exp">
       <p class="solandexpp" >해설</p>
       <p>0.9721</p>
-      <img id="explanationimg" src="" alt="">
+      <img id="explanationimg" src="Images/OpenSourceMathAnswer.jpg" alt="">
     </div>
 
   </body>
