Problem Image 출력 오류 수정
- Problem Page 구현 완료

--- a/CollegeMathBankProject/WebContent/HTML/problem.html
+++ b/CollegeMathBankProject/WebContent/HTML/problem.html
@@ -239,7 +239,7 @@
     <div class="solandexpdiv" id="exp">
       <p class="solandexpp" >해설</p>
       <p>0.9721</p>
-      <img id="explanationimg" src="Images/OpenSourceMathAnswer.jpg" alt="">
+      <img id="explanationimg" src="../../Images/OpenSourceMathAnswer.jpg" alt="">
     </div>
 
   </body>
